<resources>
    <string name="app_name">Diary-App</string>

    <!-- Strings related to login -->
    <string name="logInHeader">LogIn zur Benutzung</string>
    <string name="imageApp">ImageApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Sign in (wenn bereits registriert)</string>
    <string name="registryButton">Neue Registrierung</string>



    <!-- Strings related to registry -->
    <string name="registryText">Neu Anmelden</string>
    <string name="RegistryHeader">Registrierung</string>
    <string name="hintName">Benutzername</string>
    <string name="hintemail">E-Mail</string>
    <string name="hintpasswort">Passwort (mind. 6 Zeichen)</string>
    <string name="hintcheckpasswort">Passwort wiederholen</string>
    <string name="registryButtonText">registrieren</string>




    <!-- Strings related to ReiseMainActivity -->
    <string name="title_activity_reise_main">Ihre Reisen</string>
    <string name="addNewTravel">Neue Reise hinzufügen:</string>
    <string name="travelAim">Name der Reise</string>
    <string name="addButton">+</string>
    <string name="beginTravel">Beginn (Datum)</string>
    <string name="endTravel">Ende (Datum)</string>

    <!-- Strings related to ReiseSingleTripActivity -->
    <string name="title_activity_reise_single_trip">Reisetage</string>

    <!-- Strings related to ReiseSingleDayActivity -->
    <string name="title_activity_single_day">Reisetag</string>
    <string name="addTextButton">Text hinzufügen</string>
    <string name="infotext">Insert you personal Memory of the Day.</string>
    <string name="locationButtonText">Press to assign your current Location.</string>
    <string name="buttonForMap">Show location on map.</string>


    <!-- Camera -->
    <string name="action_settings">Settings</string>
    <string name="label_camera">Take Picture</string>

    <!-- dialog -->
    <string name="hintDialog">Gedanken niederschreiben...</string>
    <string name="addButtonDialog">Text hinzufügen</string>
    <string name="cancelText">Abbrechen</string>




</resources>