<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/android_green"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/android_green"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registryText"
            android:textColor="@color/text_dark"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="0.86" />


    </LinearLayout>


    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:background="@color/android_green">

        <EditText android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/name"
            android:hint="@string/hintName"
            android:background="@color/textBoxBackground"
            android:paddingLeft="5dp"
            android:layout_marginTop="30dp"/>

        <EditText android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/email"
            android:hint="@string/hintemail"
            android:inputType="textEmailAddress"
            android:background="@color/textBoxBackground"
            android:paddingLeft="5dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/passwort"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/textBoxBackground"
            android:hint="@string/hintpasswort"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/passwort_bestätigen"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/textBoxBackground"
            android:hint="@string/hintcheckpasswort"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/abschicken"
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/text_dark"
            android:text="@string/registryButtonText"
            android:textColor="@color/android_green" />

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>





